2008-09-08  Tomasz Dominikowski  <tdominikowski@aviary.pl>

	* pl.po: Updated Polish translation

2008-09-06  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Updated Italian translation by Gianvito Cavasoli

2008-09-05  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-09-04  Ankitkumar Patel  <ankit@redhat.com>

	* gu.po: Added Gujarati Translations.
	* LINGUAS: Added entry for Gujarati (gu).

2008-08-26  Žygimantas Beručka  <zygis@gnome.org>

	* lt.po: Updated Lithuanian translation.

2008-08-25  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-08-24  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	 gl.po: Updated Galician translation

2008-08-22  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-08-20  Tomasz Dominikowski  <tdominikowski@aviary.pl>

	* pl.po: Updated Polish translation

2008-08-18  Žygimantas Beručka  <zygis@gnome.org>

	* lt.po: Updated Lithuanian translation.

2008-08-13  Tomasz Dominikowski <tdominikowski@aviary.pl>

	* pl.po: Updated Polish translation

2008-08-12  Aaron Bockover  <abock@gnome.org>

	* POTFILES.in: Updated

	* sort-potfiles: Fixed

2008-08-12  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated.

2008-08-11  Claude Paroz  <claude@2xlibre.net>

	* fr.po: Updated French translation by Alexandre Franke and Claude Paroz.

2008-08-11  Alexandre Prokoudine  <alexandre.prokoudine@gmail.com>

	* ru.po: Updated Russian translation

2008-08-11  Žygimantas Beručka  <zygis@gnome.org>

	* lt.po: Updated Lithuanian translation.

2007-08-09  Jochen Skulj  <jochen@jochenskulj.de>

	* de.po: Updated German Translation.

2008-08-08  Jordi Mas <jmas@softcatala.org>

	* ca.po: Updated Catalan translation

2008-08-08  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-08-07  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Benjamín Valero Espinosa.
