@@ -18,18 +18,24 @@ src/Backends/Banshee.Gnome/Banshee.GnomeBackend/GnomeScreensaverManager.cs
 src/Backends/Banshee.GStreamer/Banshee.GStreamer/AudioCdRipper.cs
 src/Backends/Banshee.GStreamer/Banshee.GStreamer/PlayerEngine.cs
 src/Backends/Banshee.GStreamer/Banshee.GStreamer/Transcoder.cs
+src/Clients/Booter/Booter/Entry.cs
+src/Clients/Muinshee/Muinshee/AlbumDialog.cs
+src/Clients/Muinshee/Muinshee/BaseDialog.cs
+src/Clients/Muinshee/Muinshee/MuinsheeActions.cs
+src/Clients/Muinshee/Muinshee/PlayerInterface.cs
+src/Clients/Muinshee/Muinshee/SongDialog.cs
 src/Clients/Nereid/Nereid/Client.cs
 src/Clients/Nereid/Nereid/PlayerInterface.cs
 src/Clients/Nereid/Nereid/ViewContainer.cs
 src/Core/Banshee.Core/Banshee.Base/FileNamePattern.cs
 src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs
 src/Core/Banshee.Core/Banshee.Streaming/SaveTrackMetadataJob.cs
-src/Core/Banshee.Services/Banshee.Collection/MoveOnInfoSaveJob.cs
 src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseAlbumInfo.cs
 src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseAlbumListModel.cs
 src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseArtistInfo.cs
 src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseArtistListModel.cs
 src/Core/Banshee.Services/Banshee.Collection/ImportManager.cs
+src/Core/Banshee.Services/Banshee.Collection/MoveOnInfoSaveJob.cs
 src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs
 src/Core/Banshee.Services/Banshee.Library/HomeDirectoryImportSource.cs
 src/Core/Banshee.Services/Banshee.Library/LibrarySource.cs
@@ -60,8 +66,10 @@ src/Core/Banshee.ThickClient/Banshee.Addins.Gui/AddinTile.cs
 src/Core/Banshee.ThickClient/Banshee.Collection.Gui/DefaultColumnController.cs
 src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackListView.cs
 src/Core/Banshee.ThickClient/Banshee.Equalizer.Gui/EqualizerWindow.cs
+src/Core/Banshee.ThickClient/Banshee.Gui/BaseClientWindow.cs
 src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/AboutDialog.cs
 src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/ConfirmShutdownDialog.cs
+src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/DefaultApplicationHelperDialog.cs
 src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/ImageFileChooserDialog.cs
 src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/OpenLocationDialog.cs
 src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/TrackEditor.cs
@@ -72,6 +80,12 @@ src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackRepeatActions.cs
 src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackShuffleActions.cs
 src/Core/Banshee.ThickClient/Banshee.Gui/SourceActions.cs
 src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs
+src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/BasicTrackDetailsPage.cs
+src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/ExtraTrackDetailsPage.cs
+src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/HelpPage.cs
+src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/LyricsPage.cs
+src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/StatisticsPage.cs
+src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/TrackEditorDialog.cs
 src/Core/Banshee.ThickClient/Banshee.Gui/ViewActions.cs
 src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/ConnectedMessageBar.cs
 src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TrackInfoDisplay.cs
@@ -93,14 +107,15 @@ src/Core/Banshee.ThickClient/Resources/banshee-dialogs.glade
 src/Core/Banshee.Widgets/Banshee.Widgets/DiscUsageDisplay.cs
 src/Core/Banshee.Widgets/Banshee.Widgets/StreamPositionLabel.cs
 src/Core/Banshee.Widgets/Banshee.Widgets/VolumeButton.cs
+src/Dap/Banshee.Dap/Banshee.Dap/DapLibrarySync.cs
 src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs
+src/Dap/Banshee.Dap/Banshee.Dap/DapSync.cs
 src/Dap/Banshee.Dap/Banshee.Dap.Gui/DapActions.cs
 src/Dap/Banshee.Dap/Banshee.Dap.Gui/DapInfoBar.cs
 src/Dap/Banshee.Dap/Banshee.Dap.Gui/DapPropertiesDialog.cs
-src/Dap/Banshee.Dap/Banshee.Dap/DapLibrarySync.cs
-src/Dap/Banshee.Dap/Banshee.Dap/DapSync.cs
 src/Dap/Banshee.Dap/Banshee.Dap/MediaGroupSource.cs
 src/Dap/Banshee.Dap/Banshee.Dap/MusicGroupSource.cs
+src/Dap/Banshee.Dap/Banshee.Dap/PodcastGroupSource.cs
 src/Dap/Banshee.Dap/Banshee.Dap/RemovableSource.cs
 src/Dap/Banshee.Dap/Banshee.Dap/VideoGroupSource.cs
 src/Dap/Banshee.Dap.Ipod/Banshee.Dap.Ipod/DatabaseRebuilder.cs
@@ -145,6 +160,7 @@ src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueSource.cs
 src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastFeedModel.cs
 src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastSource.cs
 src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastTrackInfo.cs
+src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/ColumnCellDownloadStatus.cs
 src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/ColumnCellPodcast.cs
 src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/ColumnCellUnheard.cs
 src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/DownloadManager/DownloadUserJob.cs
@@ -153,6 +169,7 @@ src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastManager/Dialog/P
 src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastManager/Dialog/PodcastPropertiesDialog.cs
 src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastManager/Dialog/PodcastSubscribeDialog.cs
 src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastManager/Dialog/SyncPreferenceComboBox.cs
+src/Extensions/Banshee.RemoteAudio/Banshee.RemoteAudio/RemoteSpeakersWidget.cs
 src/Extensions/Banshee.Sample/Banshee.Sample/SampleSource.cs
 src/Extensions/Banshee.SqlDebugConsole/Banshee.SqlDebugConsole/SqlActions.cs
 src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Header.cs
