@@ -1,3 +1,7 @@
+2008-09-11  Aaron Bockover  <abock@gnome.org>
+
+	* POTFILES.in: Updated
+
 2008-09-08  Tomasz Dominikowski  <tdominikowski@aviary.pl>
 
 	* pl.po: Updated Polish translation
